# Mint_IDE_Teacher

./: .gitignore  README.md  index.html  install-mac.sh  install-windows.ps1  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
