[package]
name = "mint-grader"
version = "0.1.0"
edition = "2021"

[lib]
name = "mint_grader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", features = ["aes-crypto"] }
dirs = "6"
